--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -12,7 +12,7 @@
                         <div class="col-md-8">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Access Name</span>
+                                    <span class="input-group-text" id="basic-addon2">Access:</span>
                                 </div>
                                 <input id="accessname" name="accessname" type="text" class="form-control" placeholder="Enter Access Name" aria-label="accessname" aria-describedby="basic-addon1">
                             </div>
@@ -36,7 +36,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="access-table" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="access-table" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Access Code</th>
@@ -52,6 +52,5 @@
                 </tbody>
             </table>
         </div>
-        
     </div>
 </div>
