--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -40,7 +40,7 @@
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Contact Info</span>
+                                    <span class="input-group-text" id="basic-addon2">Contact</span>
                                 </div>
                                 <input id="contactinfo" name="contactinfo" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="contactinfo" aria-describedby="basic-addon1">
                             </div>
