--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -12,7 +12,7 @@
                         <div class="col-md-8">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Position Name</span>
+                                    <span class="input-group-text" id="basic-addon2">Position:</span>
                                 </div>
                                 <input id="positionname" name="positionname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="positionname" aria-describedby="basic-addon1">
                             </div>
