--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -11,7 +11,7 @@
                         <div class="col-md-6 mmb">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Date Range</span>
+                                    <span class="input-group-text label-width" id="basic-addon2">Date:</span>
                                 </div>
                                 <input id="dateRange" name="dateRange" type="text" class="form-control" placeholder="Select Date Range" aria-describedby="basic-addon1">
                             </div>
@@ -19,7 +19,7 @@
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">POS</span>
+                                    <span class="input-group-text label-width" id="basic-addon2">POS:</span>
                                 </div>
                                 <input id="posid" name="posid" type="text" class="form-control" placeholder="Enter POS ID" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
@@ -29,7 +29,7 @@
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Shift</span>
+                                    <span class="input-group-text label-width" id="basic-addon2">Shift:</span>
                                 </div>
                                 <input id="shift" name="shift" type="text" class="form-control" placeholder="Enter Shift" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
@@ -54,7 +54,7 @@
         </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="salesdetail-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="salesdetail-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Details ID</th>
