--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -15,7 +15,7 @@
                                     <option value="">--Select here--</option>
                                 </select>    
                                 <div class="input-group-append">
-                                    <span class="input-group-text" id="basic-addon2">Employee ID</span>
+                                    <span class="input-group-text label-width-2" id="basic-addon2">Employee ID</span>
                                 </div>
                             </div>
                             <div class="custom-dropdown" id="employeeDropdown">
@@ -25,7 +25,7 @@
                             <div class="input-group">
                                 <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessname"/>
                                 <div class="input-group-append">
-                                    <span class="input-group-text">Access Type</span>
+                                    <span class="input-group-text label-width-2">Access Type</span>
                                 </div>
                             </div>
                             <div class="custom-dropdown" id="accessDropdown">
