--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -129,71 +129,68 @@ $(document).ready(function () {
         }
     })
 
+    function populateProductsTable(data) {
+        console.log(data);
+        const tableBody = $('#products-dataTable tbody');
+        tableBody.empty();
+
+        if (data.length === 0) {
+            const tr = $('<tr>').append($('<td>', {
+                colspan: 9,
+                class: 'text-center',
+                text: 'No Data Matched'
+            }));
+            tableBody.append(tr);
+        } else {
+            data.forEach(item => {
+                let action = '';
+                if (item.status === 'ACTIVE') {
+                    action = `
+                        <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                        <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                } else if (item.status === 'INACTIVE') {
+                    action = `
+                        <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                        <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                }
+
+                const tr = $('<tr>').append(
+                    $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.description, 'data-label': 'Description', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.price, 'data-label': 'Price', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align' }),
+                    $('<td>', {
+                        html: `<img src="data:image/png;base64,${item.productimage}" alt="Product Image" class="product-image" style="max-width: 200px; max-height: 150px;"/>`,
+                        'data-label': 'Product Image',
+                    }),
+                    $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
+                    $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                    $('<td>', { html: action, 'data-label': 'Action'})
+                );
+
+                tableBody.append(tr);
+            });
+        }
+    }
+
     function LoadTable() {
-        $('#products-dataTable').DataTable({
-            'destroy': true,
-            'processing': true,
-            'serverSide': true,
-            'paging': false,
-            'searching': false,
-            'info': false,
-            'scrollCollapse': true,
-            'serverMethod': 'GET',
-            'ajax': {
-                'url': '/products/load',
-                'dataSrc': (json) => {
-                    var finalData = [];
-                    var data = json.data;
-
-                    console.log(data);
-                    $.each(data, (key, item) => {
-                        var action = '';
-                        var status = item.status;
-
-                        if (status == 'ACTIVE') {
-                            action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>'
-                        }
-                        if (status == 'INACTIVE') {
-                            action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>'
-                        }
-
-                        finalData.push({
-                            productid: item.productid,
-                            description: item.description,
-                            price: item.price,
-                            barcode: item.barcode,
-                            productimage: `<img src="data:image/png;base64,${item.productimage}" alt="#" style="max-width: 200px; max-height: 150px;" />`,
-                            status: item.status,
-                            createdby: item.createdby,
-                            createddate: item.createddate,
-                            action: action,
-                        })
-
-                    })
-
-                    return finalData;
-                },
+        $.ajax({
+            url: '/products/load',
+            method: 'GET',
+            dataType: 'json',
+            success: function(data) {
+                if (data.msg === 'success') {
+                    populateProductsTable(data.data);
+                } else {
+                    console.error(data.msg);
+                }
             },
-            'columnDefs': [{
-                targets: 1,
-                className: 'td-indent',
-            }],
-            'columns': [
-                { data: 'productid' },
-                { data: 'description' },
-                { data: 'price' },
-                { data: 'barcode' },
-                { data: 'productimage' },
-                { data: 'createdby' },
-                { data: 'createddate' },
-                { data: 'status' },
-                { data: 'action' },
-            ],
-            'fixedHeader': true,
-            initComplete: function () {
-                console.log('init complete');
+            error: function(error) {
+                console.error(error);
             }
         });
+
     }
 
     function LoadList() {
