--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -91,7 +91,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="branch-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="branch-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Branch ID</th>
