--- a/views/branch/branchscripts.ejs
+++ b/views/branch/branchscripts.ejs
@@ -108,6 +108,7 @@
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
+                            LoadTable();
                             success('Saved', 'Successfully')
                             $('#branchid').val('');
                             $('#branchname').val('');
@@ -126,72 +127,66 @@
                 })
             }
         })
+
+        function populateBranchTable(data) {
+            console.log(data);
+            const tableBody = $('#branch-dataTable tbody');
+            tableBody.empty();
+
+            if (data.length === 0) {
+                const tr = $('<tr>').append($('<td>', {
+                    colspan: 9,
+                    class: 'text-center',
+                    text: 'No Data Matched'
+                }));
+                tableBody.append(tr);
+            } else {
+                data.forEach(item => {
+                    let action = '';
+                    if (item.status === 'ACTIVE') {
+                        action = `
+                            <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                            <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                    } else if (item.status === 'INACTIVE') {
+                        action = `
+                            <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                            <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                    }
+
+                    const tr = $('<tr>').append(
+                        $('<td>', { text: item.branchid, 'data-label': 'Branch ID', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.branchname, 'data-label': 'Branch Name', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.tin, 'data-label': 'TIN', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.address, 'data-label': 'Address', class: 'custom-mobile-align' }),
+                        $('<td>', { html: `<img src="data:image/svg+xml;base64,${item.logo}" alt="Branch Logo" class="branch-logo" style="max-width: 150px; max-height: 150px;"/>` }),
+                        $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                        $('<td>', { html: action, 'data-label': 'Action' })
+                    );
+
+                    tableBody.append(tr);
+                });
+            }
+        }
     
         function LoadTable() {
-            $('#branch-dataTable').DataTable({
-                'destroy': true,
-                'processing': true,
-                'serverSide': true,
-                'paging': false,
-                'searching': false,
-                'info': false,
-                'scrollCollapse': true,
-                'serverMethod': 'GET',
-                'ajax': {
-                    'url': '/branch/load',
-                    'dataSrc': (json) => {
-                        var finalData = [];
-                        var data = json.data;
-    
-                        console.log(data);
-                        $.each(data, (key, item) => {
-                            var action = '';
-                            var status = item.status;
-    
-                            if (status == 'ACTIVE') {
-                                action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>'
-                            }
-                            if (status == 'INACTIVE') {
-                                action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>'
-                            }
-    
-                            finalData.push({
-                                branchid: item.branchid,
-                                branchname: item.branchname,
-                                tin: item.tin,
-                                address: item.address,
-                                logo: `<img src="data:image/svg+xml;base64,${item.logo}" alt="#" style="max-width: 200px; max-height: 150px;" />`,
-                                status: item.status,
-                                createdby: item.createdby,
-                                createddate: item.createddate,
-                                action: action,
-                            })
-    
-                        })
-    
-                        return finalData;
-                    },
+            $.ajax({
+                url: '/branch/load',
+                method: 'GET',
+                dataType: 'json',
+                success: function(data) {
+                    if (data.msg === 'success') {
+                        populateBranchTable(data.data);
+                    } else {
+                        console.error(data.msg);
+                    }
                 },
-                'columnDefs': [{
-                    targets: 1,
-                    className: 'td-indent',
-                }],
-                'columns': [
-                    { data: 'branchid' },
-                    { data: 'branchname' },
-                    { data: 'tin' },
-                    { data: 'address' },
-                    { data: 'logo' },
-                    { data: 'createdby' },
-                    { data: 'createddate' },
-                    { data: 'status' },
-                    { data: 'action' },
-                ],
-                'fixedHeader': true,
-                initComplete: function () {
-                    console.log('init complete');
+                error: function(error) {
+                    console.error(error);
                 }
             });
+
         }
     
         $(document).on('click', '#activeBtn', function(){
