--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -76,7 +76,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="employees-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Employee ID</th>
