--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -74,7 +74,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="pos-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="pos-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">POS ID</th>
