--- a/views/position/positionscripts.ejs
+++ b/views/position/positionscripts.ejs
@@ -3,7 +3,7 @@
         let positioncode = "";
         let status = "";
 
-        LoadTable();
+        LoadTable()
 
         $('#position-dataTable tbody').on('click', 'tr', function () {
         var dataRow = [];
@@ -33,7 +33,7 @@
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
-                            LoadTable();
+                            LoadTable()
                             success('Saved', 'Successfully')
                         }
 
@@ -61,7 +61,7 @@
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
-                            LoadTable();
+                            LoadTable()
                             success('Saved', 'Successfully')
                         }
 
@@ -88,7 +88,7 @@
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
-                            LoadTable();
+                            LoadTable()
                             success('Saved', 'Successfully')
                         }
 
@@ -103,63 +103,62 @@
                 })
         });
 
+        function populatePositionTable(data) {
+            console.log(data);
+            const tableBody = $('#position-dataTable tbody');
+            tableBody.empty();
+
+            if (data.length === 0) {
+                const tr = $('<tr>').append($('<td>', {
+                    colspan: 6,
+                    class: 'text-center',
+                    text: 'No Data Matched'
+                }));
+                tableBody.append(tr);
+            } else {
+                data.forEach(item => {
+                    let action = '';
+                    if (item.status === 'ACTIVE') {
+                        action = `
+                            <button id="editBtn" class="btn btn-outline-inventory-lighter shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                            <button id="inactiveBtn" class="btn btn-outline-inventory-lighter shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                    } else if (item.status === 'INACTIVE') {
+                        action = `
+                            <button id="editBtn" class="btn btn-outline-inventory-lighter shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                            <button id="activeBtn" class="btn btn-outline-inventory-lighter shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                    }
+
+                    const tr = $('<tr>').append(
+                        $('<td>', { text: item.positioncode, 'data-label': 'Position Code', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.positionname, 'data-label': 'Position Name', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                        $('<td>', { html: action, 'data-label': 'Action', class: '' })
+                    );
+
+                    tableBody.append(tr);
+                });
+            }
+        }
+
         function LoadTable() {
-            $('#position-dataTable').DataTable({
-                'destroy': true,
-                'processing': true,
-                'serverSide': true,
-                'paging': false,
-                'searching': false,
-                'info': false,
-                'scrollCollapse': true,
-                'serverMethod': 'GET',
-                'ajax': {
-                    'url': '/position/load',
-                    'dataSrc': (json) => {
-                        var finalData = [];
-                        var data = json.data;
-
-                        console.log(data);
-                        $.each(data, (key, item) => {
-                            var action = '';
-                            var status = item.status;
-
-                            if (status == 'ACTIVE') {
-                                action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>'
-                            }
-                            if (status == 'INACTIVE') {
-                                action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>'
-                            }
-
-                            finalData.push({
-                                positioncode: item.positioncode,
-                                positionname: item.positionname,
-                                status: item.status,
-                                createdby: item.createdby,
-                                createddate: item.createddate,
-                                action: action,
-                            })
-
-                        })
- 
-                        return finalData;
-                    },
+            $.ajax({
+                url: '/position/load',
+                method: 'GET',
+                dataType: 'json',
+                success: function(data) {
+                    if (data.msg === 'success') {
+                        populatePositionTable(data.data);
+                    } else {
+                        console.error(data.msg);
+                    }
                 },
-                'columnDefs': [{
-                    targets: 1,
-                    className: 'td-indent',
-                }],
-                'columns': [
-                    { data: 'positioncode' },
-                    { data: 'positionname' },
-                    { data: 'createdby' },
-                    { data: 'createddate' },
-                    { data: 'status' },
-                    { data: 'action' },
-                ],
-                initComplete: function () {
+                error: function(error) {
+                    console.error(error);
                 }
             });
         }
+
     })
 </script>
