--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -94,7 +94,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="products-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Product ID</th>
