Added fullname to session and updated Created by based on logged in user

--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -40,7 +40,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">MIN</span>
                                 </div>
-                                <input id="min" name="min" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="min" aria-describedby="basic-addon1">
+                                <input id="min" name="min" type="text" class="form-control" placeholder="Enter MIN" aria-label="min" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">PTU</span>
                                 </div>
-                                <input id="ptu" name="ptu" type="text" class="form-control" placeholder="Enter Date Hired" aria-label="ptu" aria-describedby="basic-addon1">
+                                <input id="ptu" name="ptu" type="text" class="form-control" placeholder="Enter PTU" aria-label="ptu" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
