--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -169,9 +169,9 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-white small">Username</span>
+                <span class="mr-2 d-none d-lg-inline text-white small"><%= fullname%></span>
                 <img class="img-profile rounded-circle"
-                    src="/images/img/undraw_profile_2.svg">
+                    src="/images/img/pngwing.com.png">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
